Moved scrambled eggs recipe to the correct page

--- a/recipes/scrambled_eggs.html
+++ b/recipes/scrambled_eggs.html
@@ -7,5 +7,78 @@
     </head>
     <body>
         <h1>Scrambled Eggs</h1>
+        <img
+            src="https://www.allrecipes.com/thmb/FYbGZoEyTly1UvZOesGHrtcwXlA=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/9175615-d4753b6d3b284a21b622bd38c94f97f3.jpg"
+            alt="Scrambled Eggs"
+            width="400" />
+
+        <h2>Description</h2>
+        <p>
+            Scrambled eggs are a classic breakfast dish made by whisking eggs,
+            often with a bit of milk or cream, and then cooking them in a pan
+            over medium heat while gently stirring until they're softly set. The
+            result is a creamy, fluffy texture with a mild flavor that can be
+            seasoned with salt, pepper, and various optional ingredients like
+            herbs, cheese, or vegetables for added flavor and texture.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Eggs</li>
+            <li>Butter or oil (for cooking)</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>
+                Crack Eggs: Crack the desired number of eggs into a bowl.
+                Typically, you might use 2-3 eggs per serving.
+            </li>
+            <li>
+                Whisk Eggs: Using a fork or whisk, beat the eggs until the yolks
+                and whites are well combined. If you like, you can add a splash
+                of milk or cream at this stage for creamier eggs.
+            </li>
+            <li>
+                Season Eggs: Season the beaten eggs with a pinch of salt and a
+                grind of black pepper. You can also add other seasonings or
+                herbs at this point, such as chopped chives or parsley.
+            </li>
+            <li>
+                Preheat Pan: Place a non-stick skillet or frying pan over medium
+                heat. Allow it to heat up for a minute or two.
+            </li>
+            <li>
+                Add Butter or Oil: Once the pan is hot, add a small amount of
+                butter or oil (about 1 teaspoon per egg) to the pan. Allow the
+                butter to melt and coat the bottom of the pan evenly.
+            </li>
+            <li>
+                Pour Eggs into Pan: Pour the beaten eggs into the pan. Let them
+                sit undisturbed for a few seconds to begin cooking around the
+                edges.
+            </li>
+            <li>
+                Scramble Eggs: Using a spatula or wooden spoon, gently push the
+                eggs from the edges toward the center of the pan. Continue to do
+                this every few seconds, allowing the uncooked egg to flow to the
+                bottom of the pan.
+            </li>
+            <li>
+                Control Heat: Adjust the heat as needed to ensure the eggs cook
+                evenly and don't brown too quickly. It's important to keep the
+                heat gentle to achieve soft, creamy scrambled eggs.
+            </li>
+            <li>
+                Finish Cooking: Continue to gently scramble the eggs until they
+                are softly set but still slightly moist. They should have a
+                creamy texture with no visible liquid egg remaining.
+            </li>
+            <li>
+                Serve Immediately: Transfer the scrambled eggs to a plate and
+                serve them hot. They pair well with toast, bacon, sausage, or
+                fresh fruit for a complete breakfast. Enjoy!
+            </li>
+        </ol>
     </body>
 </html>
