Added vegetable stir fry and greek salad recipes

--- a/recipes/scrambled_eggs.html
+++ b/recipes/scrambled_eggs.html
@@ -80,5 +80,6 @@
                 fresh fruit for a complete breakfast. Enjoy!
             </li>
         </ol>
+        <a href="../index.html">Back to recipes</a>
     </body>
 </html>
